[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portal-platformer"
dynamic = ["version"]
description = 'A platformbased on the proral game.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Waylon S. Walker", email = "waylon@waylonwalker.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ['pygame', 'pygbag']

[project.urls]
Documentation = "https://github.com/unknown/portal-platformer#readme"
Issues = "https://github.com/unknown/portal-platformer/issues"
Source = "https://github.com/unknown/portal-platformer"

[project.scripts]
portal-platformer = "portal_platformer.cli:main"

[tool.hatch.version]
path = "portal_platformer/__about__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:portal_platformer tests}"

[tool.coverage.run]
source_pkgs = ["portal_platformer", "tests"]
branch = true
parallel = true
omit = ["portal_platformer/__about__.py"]

[tool.coverage.paths]
portal_platformer = [
    "portal_platformer",
    "*/portal-platformer/portal_platformer",
]
tests = ["tests", "*/portal-platformer/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
